--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,6 +1,8 @@
 <% include header %>
 
-  <h1><%-title %></h1>
-  <p>Welcome to <%-title %></p>
+  <div id="my_camera" style="width:320px; height:240px;"></div>
+  <div id="my_result"></div>
+
+  <a id="snapshot_btn" href="javascript:void(0)">Take Snapshot</a>
 
 <% include footer %>
