--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -1,2 +1,6 @@
+<script src="/js/libs/jquery-3.1.1.min.js"></script>
+<script src="/js/libs/webcam-1.0.16.min.js"></script>
+<script src="/js/face.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
