--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,8 +1,10 @@
 <% include header %>
 
-  <div id="my_camera" style="width:320px; height:240px;"></div>
-  <div id="my_result"></div>
+<div id="my_camera" style="width:320px; height:240px;"></div>
+<div id="my_result"></div>
 
-  <a id="snapshot_btn" href="javascript:void(0)">Take Snapshot</a>
+<a id="snapshot_btn" href="javascript:void(0)">Take Snapshot</a>
 
+<br/>
+<input id="upload_photo" type="file" accept="image/*" />
 <% include footer %>
