--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,8 +1,109 @@
 body {
-  padding: 50px;
+  padding: 15px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
-a {
-  color: #00B7FF;
+* {
+  box-sizing: border-box;
 }
+.clearfix:before {
+   content: '';
+  clear: both;
+
+}
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+h1 {
+  text-align: center;
+}
+a {
+  text-decoration: none;
+}
+
+.camera-holder {
+  width: 30%;
+  float: left;
+}
+#my_camera {
+  position: relative;
+  &:after {
+    content: '';
+    display: block;
+    background: url('../images/camera.png') no-repeat 50% 50%;
+    background-size: cover;
+    z-index: 1;
+    position: absolute;
+    top: -5px;
+    bottom: -5px;
+    right: -10px;
+    left: -10px;
+  }
+}
+
+.memojy-block {
+  width: 100%;
+  float: left;
+  background: #4F4D3F;
+}
+.btn {
+  border: none;
+  background: #00B7FF;
+  width: 96%;
+  padding: 10px 20px;
+  display: block;
+  margin: 15px -2%;
+  text-align: center;
+  font-size: 36px;
+  color: #FFF;
+  cursor: pointer;
+}
+#popup {
+  position: fixed;
+  top: 50px;
+  bottom: 50px;
+  margin-left: -160px;
+  left: 50%;
+  width: 350px;
+  height: 270px;
+  background: #ccc;
+  z-index: 5;
+  #my_result {
+    padding: 35px;
+    img {
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+  .close {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    width: 20px;
+    height: 20px;
+    font-style: normal;
+    font-size: 14px;
+    border-radius: 50%;
+    border: 1px solid;
+    text-align: center;
+    cursor: pointer;
+  }
+}
+#upload_photo {
+  display: none;
+}
+label[for=upload_photo] {
+  background-color: #d630c0;
+}
+.middle {
+  text-align: center;
+  clear: both;
+  font-size: 30px;
+  color: #663399;
+  padding-right: 50px;
+}
+
+
+
