--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -22,7 +22,7 @@ a {
 }
 
 .camera-holder {
-  width: 30%;
+  width: 320px;
   float: left;
 }
 #my_camera {
@@ -49,10 +49,10 @@ a {
 .btn {
   border: none;
   background: #00B7FF;
-  width: 96%;
+  width: 100%;
   padding: 10px 20px;
   display: block;
-  margin: 15px -2%;
+  margin: 15px 0;
   text-align: center;
   font-size: 36px;
   color: #FFF;
@@ -61,12 +61,12 @@ a {
 #popup {
   position: fixed;
   top: 50px;
-  bottom: 50px;
+  bottom: auto;
   margin-left: -160px;
   left: 50%;
   width: 350px;
-  height: 270px;
-  background: #ccc;
+  height: auto;
+  background: #dcdcdc;
   z-index: 5;
   #my_result {
     padding: 35px;
