--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,9 +14,8 @@
     </div>
 
   </div>
-  <div class="memojy-block">
-
-
+  <div id="smiley" class="memojy-block">
+      <% include smiley %>
   </div>
 </section>
 <div id="popup"  class="hidden">
