Added nose, left, right, mouth rectangles are added

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,6 +14,8 @@
     </div>
 
   </div>
+  <div id="sm" class="memojy-block">
+  </div>
   <div id="smiley" class="memojy-block">
       <% include smiley %>
   </div>
