--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,10 +14,12 @@
     </div>
 
   </div>
-  <div id="sm" class="memojy-block">
-  </div>
-  <div id="smiley" class="memojy-block">
+  <div style="position:relative"  class="memojy-block">
+    <div id="smiley">
       <% include smiley %>
+    </div>
+    <div id="sm" class="memojy-block" style="position:absolute; top:0; left: 0">
+    </div>
   </div>
 </section>
 <div id="popup"  class="hidden">
