--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -45,7 +45,7 @@ a {
   margin-left: 20px;
   width: 320px;
   float: left;
-  background: #4F4D3F;
+  //background: #4F4D3F;
 }
 .btn {
   border: none;
