Multiple smileys are added

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,14 +14,9 @@
     </div>
 
   </div>
-  <div style="position:relative"  class="memojy-block">
-    <div id="smiley">
-      <% include smiley %>
-    </div>
-    <div id="sm" class="memojy-block" style="position:absolute; top:0; left: 0">
-    </div>
-  </div>
 </section>
+<div id="smiley-container">
+</div>
 <div id="popup"  class="hidden">
   <div id="my_result">
 
