--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -47,6 +47,10 @@ a {
   float: left;
   //background: #4F4D3F;
 }
+#smiley-container {
+  width: 100%;
+  float: left;
+}
 .btn {
   border: none;
   background: #00B7FF;
