--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,13 +14,16 @@
     </div>
 
   </div>
+  <div id="sm" class="memojy-block">
+     <canvas id="canvas" width="150" height="150">
+
+     </canvas>
+  </div>
 </section>
 <div id="smiley-container">
 </div>
 <div id="popup"  class="hidden">
-  <div id="my_result">
-
-  </div>
+  <div id="my_result"></div>
   <i class="close">x</i>
 </div>
 <% include footer %>
