--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -1,3 +1,6 @@
+ <p class="copyright">All Right Reserved &copy: MeMoji Team, Hackathon 2016</p>
+
+
 <script src="/js/libs/jquery-3.1.1.min.js"></script>
 <script src="/js/libs/webcam-1.0.16.min.js"></script>
 <script src="/js/libs/svg-2.3.6.min.js"></script>
