--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,8 +4,8 @@
 <h2>Welcome to Memoji website! Let's create emojies like you.</h2>
 <section class="clearfix">
   <div class="camera-holder">
-    <div class="visiable">
-      <div id="my_camera" style="width: 370px; height: 300px;"></div>
+    <div id="visible">
+      <div id="my_camera" style="width: 370px; height: 320px;"></div>
       <a id="snapshot_btn" class="btn" href="javascript:void(0)">Take Snapshot</a>
 
       <div class="middle">or</div>
@@ -16,7 +16,7 @@
     </div>
     <div id="popup"  class="hidden">
       <div id="my_result"></div>
-      <i class="close"></i>
+      <span class="close">Close</span>
     </div>
   </div>
   <div id="sm" class="memojy-block">
