--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -39,7 +39,8 @@ a {
 .camera-holder {
   width: 370px;
   margin: 0 auto;
-
+  position: relative;
+  min-height: 370px;
 }
 #my_camera {
   position: relative;
@@ -60,12 +61,19 @@ a {
   }
 }
 
-.memojy-block {
-  margin-left: 20px;
-}
 #smiley-container {
-  width: 100%;
-  float: left;
+  width: 1200px;
+  height: auto;
+  background: #fff;
+  .memojy-block {
+    margin-left: 30px;
+    margin-bottom: 30px;
+    box-shadow: 0px 15px 20px rgba(0,0,0,.2);
+    border-radius: 10px;
+    background-color: #fff;
+    z-index: 1;
+    float: left;
+  }
 }
 .btn {
   display: block;
@@ -80,19 +88,18 @@ a {
   width: 180px;
   text-align: center;
   padding: 0 12px;
+  cursor: pointer;
+  margin-top: 30px;
 }
 #popup {
-  position: fixed;
-  top: 50px;
+  position: absolute;
+  top: 0;
   bottom: auto;
-  margin-left: -160px;
-  left: 50%;
+  left: 0;
   width: 370px;
   height: auto;
-  background: #dcdcdc;
   z-index: 5;
   #my_result {
-    padding: 35px;
     img {
       width: auto;
       height: auto;
@@ -104,13 +111,21 @@ a {
     line-height: 22px;
     font-size: 20px;
     color: #4A4A4A;
+    display: block;
+    clear: both;
+    text-align: center;
+    cursor: pointer;
+    height: 150px;
+    z-index: 10;
+    padding-top: 30px;
+    background: #fff;
   }
 }
 #upload_photo {
   display: none;
 }
 label[for=upload_photo]{
-    color: #76d04b;
+    color: #50E3C2;
 }
 label[for=upload_photo],
 .middle {
@@ -122,7 +137,9 @@ label[for=upload_photo],
 }
 .copyright {
   text-align: center;
+  width: 100%;
 }
+
 
 
 
