--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,7 +5,7 @@
 <section class="clearfix">
   <div class="camera-holder">
     <div id="visible">
-      <div id="my_camera" style="width: 370px; height: 320px;"></div>
+      <div id="my_camera" style="width: 320px; height: 240px;"></div>
       <a id="snapshot_btn" class="btn" href="javascript:void(0)">Take Snapshot</a>
 
       <div class="middle">or</div>
@@ -24,7 +24,7 @@
     </canvas>
   </div>
 </section>
-<div id="smiley-container">
+<div id="smiley-container" class="clearfix">
 </div>
 
 <% include footer %>
