--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -1,4 +1,4 @@
- <p class="copyright">All Right Reserved &copy: MeMoji Team, Hackathon 2016</p>
+ <p class="copyright clearfix">All Right Reserved &copy: MeMoji Team, Hackathon 2016</p>
 
 
 <script src="/js/libs/jquery-3.1.1.min.js"></script>
