--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -37,7 +37,8 @@ a {
   text-decoration: none;
 }
 .camera-holder {
-  width: 370px;
+  width: 100%;
+  max-width: 320px;
   margin: 0 auto;
   position: relative;
   min-height: 370px;
@@ -62,8 +63,9 @@ a {
 }
 
 #smiley-container {
-  width: 1200px;
+  max-width: 1050px;
   height: auto;
+  margin: 0 auto;
   background: #fff;
   .memojy-block {
     margin-left: 30px;
@@ -96,7 +98,6 @@ a {
   top: 0;
   bottom: auto;
   left: 0;
-  width: 370px;
   height: auto;
   z-index: 5;
   #my_result {
@@ -138,6 +139,13 @@ label[for=upload_photo],
 .copyright {
   text-align: center;
   width: 100%;
+  float: left;
+}
+#popup,
+#visible {
+  width: 100%;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 
